Vehicle tilting and improve railway sign editing screen part 1